--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -18,8 +18,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
-    "baseUrl": "./src"
+    "noUncheckedSideEffectImports": true
   },
   "include": ["vite.config.ts"]
 }
