--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
