--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/index.js",
@@ -19,14 +20,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "sequelize": "^6.37.7"
+    "joi": "^17.13.3",
+    "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
-    "@types/node": "^22.13.14",
-    "@types/sequelize": "^4.28.20",
+    "@types/joi": "^17.2.3",
+    "@types/node": "^22.14.1",
     "dotenv": "^16.4.7",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
@@ -39,7 +41,8 @@
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.13",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
+    "typeorm": "^0.3.22",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.28.0"
   }
 }
