--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
