--- a/backend/db/docker-compose.yml
+++ b/backend/db/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   mysql:
     image: mysql:8.0
-    container_name: local_mysql_db
+    container_name: hdmovie
     ports:
       - '33061:3306'
     environment:
