feat: Implement Movie management API with controller, service, and repository layers

--- a/backend/package.json
+++ b/backend/package.json
@@ -52,6 +52,7 @@
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.13",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typeorm": "^0.3.22",
     "typescript": "^5.8.3",
