--- a/backend/package.json
+++ b/backend/package.json
@@ -26,22 +26,28 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "mysql2": "^3.14.0",
+    "otp-generator": "^4.0.1",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/joi": "^17.2.3",
     "@types/node": "^22.14.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/otp-generator": "^4.0.2",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
