--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
     "check:all": "npm run check:prettier && npm run check:lint && npm run check:type"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
