--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
