--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/date-fns": "^2.5.3",
     "concurrently": "^9.1.2",
     "husky": "^9.1.7"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
