--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router": "^7.4.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
