--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
