--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "check:all": "npm run check:prettier && npm run check:lint && npm run check:type"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.1",
+    "@cloudinary/url-gen": "^1.21.0",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-icons": "^1.3.2",
@@ -24,10 +26,12 @@
     "embla-carousel-react": "^8.6.0",
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.485.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.5.3",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5"
   },
