--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,11 +33,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "iconsax-reactjs": "^0.0.8",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-responsive-3d-carousel": "^2.1.5",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.0.2",
