--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.485.0",
