feat: update build script and add redirect configuration for improved deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && npm run copy:redirects",
+    "copy:redirects": "copy public\\_redirects dist\\_redirects",
     "lint": "eslint .",
     "preview": "vite preview",
     "check:type": "tsc --project tsconfig.json --noEmit",
