--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
     "concurrently": "^9.1.2",
     "husky": "^9.1.7"
   },
-  "dependencies": {
-    "date-fns": "^4.1.0"
-  }
+  "dependencies": {}
 }
