--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,4 @@
 [build]
+  base = "frontend"
   command = "npm install --legacy-peer-deps && npm run build"
-  publish = "dist" # hoặc "build", tuỳ framework bạn đang dùng
+  publish = "frontend/dist"  # hoặc "frontend/build" nếu bạn dùng React CRA
