--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "react-responsive-3d-carousel": "^2.1.5",
     "react-router": "^7.4.1",
     "react-router-dom": "^7.5.3",
+    "react-tag-input": "^6.10.6",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.5",
