fix: update install scripts to use --legacy-peer-deps for compatibility

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "prepare": "husky",
     "postinstall": "npm run install:all",
     "install:all": "concurrently \"npm run install:backend\" \"npm run install:frontend\"",
-    "install:backend": "cd backend && npm install",
-    "install:frontend": "cd frontend && npm install",
+    "install:backend": "cd backend && npm install --legacy-peer-deps ",
+    "install:frontend": "cd frontend && npm install --legacy-peer-deps",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd backend && npm run dev",
     "start:frontend": "cd frontend && npm run dev",
