--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "embla-carousel-react": "^8.6.0",
     "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.485.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
